[project]
name = "cashier-server"
version = "0.13.0"
description = "Cashier synchronization server in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beancount>=3.2.0",
    "beanquery>=0.2.0",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]

[project.scripts]
cashier-server = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
# pythonpath = [
#   "."
# ]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include the package subfolder in the distribution package.
#packages = ["pricedl"]
only-include = ["main.py"]
